syntax = "proto3";

package com.google.wear.jetfit.proto;

option java_package = "com.google.wear.jetfit.proto";

message CurrentActivity {
  string activityId = 1;
  bool active = 2;
  string title = 3;
  double distance = 4;
}

message Settings {
  double weeklyGoal = 1;
}
